Fix size and gap nav 2k

--- a/css/style.css
+++ b/css/style.css
@@ -448,7 +448,10 @@ footer .logo {filter: brightness(0) invert(1);padding: 32px 0;}
     .early-access-text {
         max-width: unset;
     }
-    
+    nav {
+        gap: 50px;
+        font-size: 18px;
+    }
 }
 
 
